# Caixa-d-gua-SE

./: .gitignore  README.md
codigo_esp32/: CMakeLists.txt  sdkconfig
codigo_esp32/components/ds18x20/: .eil.yml  CMakeLists.txt  component.mk  ds18x20.c  ds18x20.h
codigo_esp32/components/esp_idf_lib_helpers/: .eil.yml  LICENSE
codigo_esp32/components/onewire/: .eil.yml  CMakeLists.txt  Kconfig  LICENSE  onewire.c
codigo_esp32/components/ssd1306/: ssd1306.c  ssd1306.h
codigo_esp32/components/ultrasonic/: .eil.yml
codigo_esp32/main/: CMakeLists.txt  main.c
codigo_esp32/main/config/atuador/: atuador.c  atuador.h
codigo_esp32/main/config/bluetooth/: bluetooth.c  bluetooth.h
codigo_esp32/main/config/botao/: botao.c  botao.h
codigo_esp32/main/config/distancia/: distancia.c  distancia.h
codigo_esp32/main/config/led/: led.c  led.h
codigo_esp32/main/config/oled/: oled.c  oled.h
codigo_esp32/main/config/temperatura/: temperatura.c  temperatura.h
docs/: Máquina de Estados.docx
